fix alignment of icon buttons in navbar

--- a/viral-vtubers-frontend/src/app/shared/components/navbar/navbar.component.scss
+++ b/viral-vtubers-frontend/src/app/shared/components/navbar/navbar.component.scss
@@ -101,6 +101,8 @@
 .iconBtns {
   display: flex;
   column-gap: 1em;
+
+  margin-top: 8px;
 }
 
 .notify {
